Upstream/feature/2288 prepare release 500 (#2390)
* Revert "#2298 - Removed DynamicDeck dependency on deprecated package com.day.cq.dam.api.collection which causes problems w/ AEM CS deployments. (#2319)" (#2322)

This reverts commit d4f62de19debe22bba386d47cf683ed2bae695f3.

* #2324 On-Deploy-Scripts are not supported on AEMaaCS (#2326)

* Removed accidental changelog statement

* Updated target AEM version

* #2330, Versioned ClientLibs are not supported by Page Exports (#2331)

* Versioned ClientLibs are not supported by Page Exports (cw-wcm-content-sync)

* Added comment explaining where the rr.map(..) is invoked

* Incorrect Injectors ordering with service.ranking #2344 - fix service… (#2345)

* Incorrect Injectors ordering with service.ranking #2344 - fix service ranking according to OSGi specification

Co-authored-by: abrdashevskiy <andrey.brdashevskiy@omnigon.com>

* #2350 -  Fixed null check in VanityServiceUrlImpl, Added hook for Van… (#2351)

* #2350 -  Fixed null check in VanityServiceUrlImpl, Added hook for VanityUrlAdjuster in VanityServiceUrlImpl

* Feature/2359 deep prune administrators (#2360)

* #2359 - Deprecated adminOnlyProcessDefinitionFactory and switched Deep Prune to Administrators Only (allowing all of the administrators group to use that tool)

* #2303 - EnsureOakIndexServlet (exposed via the OSGi Console) should b… (#2304)

* #2303 - EnsureOakIndexServlet (exposed via the OSGi Console) should be invokable via an inline HTML form

* Removed DynamicDeck dependency on deprecated package com.day.cq.dam.api.collection which causes problems w/ AEM CS deployments. (#2323)

* #2298 - Removed DynamicDeck dependency on deprecated package com.day.cq.dam.api.collection which causes problems w/ AEM CS deployments.

* #2357 - Added safeguards to SMTPMailServiceHealthCheck to help avoid … (#2358)

* #2357 - Added safeguards to SMTPMailServiceHealthCheck to help avoid run-way email pings

* Changelog for 4.7.2 co