@@ -155,8 +155,8 @@ public class RemoteAssetsConfigImplTest {
         assertEquals(TEST_SERVER_PASSWORD, config.getPassword());
         assertEquals(Arrays.asList(TEST_TAGS_PATH_A, TEST_TAGS_PATH_B), config.getTagSyncPaths());
         assertEquals(Arrays.asList(TEST_DAM_PATH_A, TEST_DAM_PATH_B), config.getDamSyncPaths());
-        assertEquals(new Integer(TEST_RETRY_DELAY), config.getRetryDelay());
-        assertEquals(new Integer(TEST_SAVE_INTERVAL), config.getSaveInterval());
+        assertEquals(Integer.valueOf(TEST_RETRY_DELAY), config.getRetryDelay());
+        assertEquals(Integer.valueOf(TEST_SAVE_INTERVAL), config.getSaveInterval());
         assertEquals(new HashSet<String>(Arrays.asList(TEST_WHITELISTED_SVC_USER_A, TEST_WHITELISTED_SVC_USER_B)), config.getWhitelistedServiceUsers());
 
         assertNotNull(config.getRemoteAssetsHttpExecutor());
